     u_char*/char* cleanup; ok markus
   - markus@cvs.openbsd.org 2001/09/17 20:22:14
     [scard.c]
     never keep a connection to the smartcard open.
     allows ssh-keygen -D U while the agent is running; report from 
     jakob@
   - stevesk@cvs.openbsd.org 2001/09/17 20:38:09
     [sftp.1 sftp.c]
     cleanup and document -1, -s and -S; ok markus@

20010917
 - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
 - (tim) [includes.h openbsd-compat/getopt.c openbsd-compat/getopt.h]
	 rename getopt() to BSDgetopt() to keep form conflicting with
	 system getopt().
	 [Makefile.in configure.in] disable filepriv until I can add
	 missing procpriv calls.

20010916
 - (djm) Workaround XFree breakage in RPM spec file
 - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/09/16 14:46:54
      [session.c]
      calls krb_afslog() after setting $HOME; mattiasa@e.kth.se; fixes
      pr 1943b

20010915
 - (djm) Make do_pre_login static to avoid prototype #ifdef hell
 - (djm) Sync scard/ stuff
 - (djm) Redhat spec file cleanups from Pekka Savola <pekkas@netcore.fi> and
   Redhat
 - (djm) Redhat initscript config sanity checking from Pekka Savola 
   <pekkas@netcore.fi>
 - (djm) Clear supplemental groups at sshd start to prevent them from 
   being propogated to random PAM modules. Based on patch from Redhat via
   Pekka Savola <pekkas@netcore.fi>
 - (djm) Make sure rijndael.c picks config.h
 - (djm) Ensure that u_char gets defined

20010914
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/13
     [rijndael.c rijndael.h]
     missing $OpenBSD
   - markus@cvs.openbsd.org 2001/09/14
     [session.c]
     command=xxx overwrites subsystems, too
   - markus@cvs.openbsd.org 2001/09/14
     [sshd.c]
     typo

20010913
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/08/23 11:31:59
     [cipher.c cipher.h]
     switch to the optimised AES reference code from
     http://www.esat.kuleuven.ac.be/~rijmen/rijndael/rijndael-fst-3.0.zip

20010912