@@ -23,6 +23,9 @@
    - stevesk@cvs.openbsd.org 2001/09/17 20:38:09
      [sftp.1 sftp.c]
      cleanup and document -1, -s and -S; ok markus@
+   - markus@cvs.openbsd.org 2001/09/17 20:50:22
+     [key.c ssh-keygen.c]
+     better error handling if you try to export a bad key to ssh.com
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
@@ -6483,4 +6486,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1535 2001/09/18 05:47:32 mouring Exp $
+$Id: ChangeLog,v 1.1536 2001/09/18 05:49:14 mouring Exp $
